# dioxus_guide

./: Cargo.toml  Dioxus.toml
src/: main.rs
src/components/: mod.rs  preview.rs  stories.rs  story_comment.rs  story_listing.rs
src/data/hacker_news/: comment.rs  mod.rs  story_item.rs  story_page.rs
